--- a/package.json
+++ b/package.json
@@ -44,18 +44,18 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
-  },
-  "devDependencies": {
+    "styled-components": "^5.1.1",
+    "nodemon": "^1.18.9",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.5"
+  },
+  "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-plugin-react": "^7.12.3",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.9",
     "prettier": "^1.15.3",
     "react-hot-loader": "^4.6.3",
     "webpack": "^4.28.4",
