commit after switch to online mode

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=MERN
-APP_ENV=local
+APP_ENV=online
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=myconnection
 DB_HOST=127.0.0.1
-DB_PORT=27017
+DB_PORT=27017hefe
 DB_DATABASE=repacks
 DB_USERNAME=root
 DB_PASSWORD=
