--- a/.env
+++ b/.env
@@ -3,13 +3,14 @@ APP_ENV=online
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_PORT = 3000
+APP_PORT=3000
+APP_KEY=ALSDUEI23F9823JF43034FJ349F83H4F834FU
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=myconnection
 DB_HOST=127.0.0.1
-DB_PORT=27017hefe
+DB_PORT=27017
 DB_DATABASE=repacks
 DB_USERNAME=root
 DB_PASSWORD=
