--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "helmet": "^3.15.0",
     "jquery": "^3.5.1",
     "json-loader": "^0.5.7",
+    "jsonwebtoken": "^8.5.1",
     "material-table": "^1.68.0",
     "mdbreact": "^4.27.0",
     "mongoose": "^5.4.3",
